syntax = "proto3";

package proto;

option go_package = "common/proto";

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}
  rpc GetProduct(GetProductRequest) returns (GetProductResponse) {}
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse) {}
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse) {}
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse) {}
}

message Product {
  int64 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  string main_image = 6;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  int32 stock = 4;
  string main_image = 5;
}

message CreateProductResponse {
  int64 product_id = 1;
  string message = 2;
}

message GetProductRequest {
  int64 product_id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message ListProductsRequest {
  int32 page = 1;
  int32 page_size = 2;
  string keyword = 3; // 支持商品名模糊搜索
}

message ListProductsResponse {
  repeated Product products = 1;
  int32 total = 2;
}

message UpdateProductRequest {
  int64 product_id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  string main_image = 6;
}

message UpdateProductResponse {
  bool success = 1;
  string message = 2;
}

message DeleteProductRequest {
  int64 product_id = 1;
}

message DeleteProductResponse {
  bool success = 1;
  string message = 2;
} 